css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";



// Our variables
$base-font-family: Georgia, Serif;
$base-font-size:   16px;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$sansserif-font:  Helvetica;

$spacing-unit:     30px;

$text-color:       #111;
$background-color: #fdfdfd;
$brand-color:      #2a7ae2;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

$purple-color:    #a17db1;
$green-color: darken(#ccff33,15%);

$on-palm:          600px;
$on-laptop:        800px;


// Using media queries with like this:
// @include media-query($palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }
@mixin media-query($device) {
    @media screen and (max-width: $device) {
        @content;
    }
}



// Import partials from `sass_dir` (defaults to `_sass`)
@import
        "base",
        "layout",
        "syntax-highlighting"
;

.site-header {
  // background-image: url("/troyandgay.com/img/TG.png");
  // background-repeat: no-repeat;
  // background-position: left top;
  position:fixed;
  left:0;
  top:0;
  width:150px;
  height:150px;
  z-index:1000;
}

article .post-title,
article .post-title a {
  font-family: $sansserif-font;
  font-weight: bold;
  font-size: 1.35em;
  color: lighten($text-color,40%)
}
article .post-content {
  padding-left:1em;
  padding-right:1em;
  line-height:1.7em;
}
article .post-content a {
  color:saturate($purple-color,15%);
  border-bottom:3px solid $green-color;
  // padding-bottom:0px;
  // margin-bottom:0px;
  margin-top:-10px;
  // margin-bottom:-5px;
}
article .post-content a:hover {
  text-decoration:none;
  border-bottom:3px solid darken($green-color,10%);
}
.post-list article {
  margin-bottom: 5em;
}

article img {
  padding:3px;
}


article h1,
article h2,
article h3,
article h4,
article h5,
article h6 {
  font-family: $sansserif-font;
  font-weight: bold;
  color: lighten($text-color,40%)
}

article h1 { font-size: 150%; }
article h2 { font-size: 140%; }
article h3 { font-size: 130%; }
article h4 { font-size: 120%; }
article h5 { font-size: 110%; }
article h6 { font-size: 100%; }

.tag-list {
  font-family: $sansserif-font;
}
.post-meta {
  float:right;
  font-family: $sansserif-font;
  color: $purple-color;
}

.site-footer {
  font-family: $sansserif-font;
  color: lighten($text-color,40%);
  background-color: lighten($purple-color,15%);
}

.badge a {
  color: $background-color;
  text-decoration: none;
  border:none;
}

